fixed spacing

--- a/css/styles.css
+++ b/css/styles.css
@@ -61,7 +61,7 @@
 
 .table-wrapper {
     font-size: 11px;
-    height: 300px;
+    height: 360px;
     overflow-y: auto;
     width: 100%;
 }
